--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         01
                     </span>
                 </div>
-                <div class="day">
+                <div class="day select">
                     <span>
                         Qua
                     </span>
@@ -88,22 +88,6 @@
                     </span>
                     <span>
                         05
-                    </span>
-                </div>
-                <div class="day">
-                    <span>
-                        Dom
-                    </span>
-                    <span>
-                        06
-                    </span>
-                </div>
-                <div class="day">
-                    <span>
-                        Seg
-                    </span>
-                    <span>
-                        07
                     </span>
                 </div>
             </div>
