--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
             </div>
         </header>
 
+
+        <button>
+            <img src="./src/images/add.svg" alt="Botão de adicionar">
+        </button>
+
     </div>
     
+
+    <script src="./src/js/main.js"></script>
 </body>
 </html>
