--- a/index.html
+++ b/index.html
@@ -105,10 +105,42 @@
             </div>
         </main>
 
-        <button>
+        <footer>
+            <ul class="footer__butons">
+                <ul>
+                    <li>
+                        <button>
+                            <img src="./src/images/foooter__logs/today-button.svg" alt="">
+                        </button>
+                    </li>
+                    <li>
+                        <button>
+                            <img src="./src/images/foooter__logs/habits-button.svg" alt="">
+                        </button>
+                    </li>
+                    <li>
+                        <button>
+                            <img src="./src/images/foooter__logs/tasks-button.svg" alt="">
+                        </button>
+                    </li>
+                    <li>
+                        <button>
+                            <img src="./src/images/foooter__logs/categories-button.svg" alt="">
+                        </button>
+                    </li>
+                    <li>
+                        <button>
+                            <img src="./src/images/foooter__logs/timer-button.svg" alt="">
+                        </button>
+                    </li>
+                </ul>
+            </ul>
+        </footer>
+
+        <button type="button" id="add-button" >
             <img src="./src/images/add.svg" alt="Botão de adicionar">
         </button>
-
+        
     </div>
     
 
