update: html, css and js

--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
 
         <footer>
             <ul class="footer__butons">
-                <ul>
                     <li>
                         <button>
                             <img src="./src/images/foooter__logs/today-button.svg" alt="">
@@ -133,7 +132,6 @@
                             <img src="./src/images/foooter__logs/timer-button.svg" alt="">
                         </button>
                     </li>
-                </ul>
             </ul>
         </footer>
 
@@ -144,6 +142,6 @@
     </div>
     
 
-    <script src="./src/js/main.js"></script>
+    <script src="./src/js/main.js" type="module"></script>
 </body>
 </html>
