create: a new js file with constants

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         01
                     </span>
                 </div>
-                <div class="day select">
+                <div class="day selected">
                     <span>
                         Qua
                     </span>
@@ -108,7 +108,7 @@
         <footer>
             <ul class="footer__butons">
                     <li>
-                        <button>
+                        <button class=" selected">
                             <img src="./src/images/foooter__logs/today-button.svg" alt="">
                         </button>
                     </li>
